--- a/dotfiles/waybar/style.css
+++ b/dotfiles/waybar/style.css
@@ -71,6 +71,9 @@ tooltip {
 
 #network {
     background: #1e1e2e;
+    padding: 0px 10px;
+    margin: 0;
+    margin-top: 5px;
 }
 
 #temperature {
