--- a/dotfiles/waybar/style.css
+++ b/dotfiles/waybar/style.css
@@ -123,6 +123,7 @@ tooltip {
     border-radius: 20px 20px 20px 20px;
     border-left: 0px;
     border-right: 0px;
+    margin: 5px;
 }
 
 #bluetooth {
