--- a/dotfiles/waybar/style.css
+++ b/dotfiles/waybar/style.css
@@ -120,10 +120,9 @@ tooltip {
 
 #network {
     color: #f9e2af;
-    border-radius: 20px 20px 20px 20px;
+/*    border-radius: 20px 20px 20px 20px;
     border-left: 0px;
-    border-right: 0px;
-    margin: 5px;
+    border-right: 0px; */
 }
 
 #bluetooth {
