--- a/dotfiles/waybar/style.css
+++ b/dotfiles/waybar/style.css
@@ -120,14 +120,14 @@ tooltip {
 
 #network {
     color: #f9e2af;
-    border-radius: 20px 20px 20px 20px;
+    border-radius: 20px 0 0 20px;
     border-left: 0px;
     border-right: 0px;
 }
 
 #bluetooth {
     color: #89b4fa;
-    border-radius: 20px;
+    border-radius: 0 0 0 20px;
     margin-right: 10px
 } 
 
