--- a/dotfiles/waybar/style.css
+++ b/dotfiles/waybar/style.css
@@ -127,7 +127,7 @@ tooltip {
 
 #bluetooth {
     color: #89b4fa;
-    border-radius: 0 0 0 20px;
+    border-radius: 0 20px 20px 0;
     margin-right: 10px
 } 
 
