--- a/dotfiles/waybar/style.css
+++ b/dotfiles/waybar/style.css
@@ -135,6 +135,7 @@ tooltip {
     color: #89b4fa;
     border-left: 0px;
     border-right: 0px;
+    padding-left: 10px;
 }
 
 #pulseaudio.microphone {
